Fix the tags when there's to many and too long

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,11 @@ div.message, div.timestamp {
 	text-decoration: none;
 }
 
+div.labels .label {
+	float: left;
+	margin-bottom: 0.25em;
+}
+
 div.vertical-space {
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
